# auto-reviewer

./: .gitignore  README.md  prd_v2.md  pyproject.toml
.github/workflows/: code-review.yml  design-review.yml
src/auto_reviewer/: __main__.py  codex.py  github_client.py  prompts.py  reviewers.py  workspace.py
tests/: test_cli.py  test_codex.py  test_github_client.py  test_prompts.py  test_reviewers.py  test_workspace.py
