[project]
name = "auto-reviewer"
version = "0.1.0"
description = "GitHub Actions agent that runs codex against issues and PRs"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_reviewer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
